--- a/Index.HTML
+++ b/Index.HTML
@@ -10,10 +10,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
-    <link rel="icon" href="./Assets/IMG/png-clipart-app-store-calculator-android-multiplication-electronics-calculator-PhotoRoom.png-PhotoRoom.png"
-        type="image/x-icon">
+    <link rel="icon" href="./Assets/IMG/png-clipart-app-store-calculator-android-multiplication-electronics-calculator-PhotoRoom.png-PhotoRoom.png" type="image/x-icon">
+    <link rel="stylesheet" href="./Assets/CSS/loader.css">
 </head>
 <body>
+    <div id="cargador">
+        <span class="loader"></span>
+    </div>
     <div class="calculator">
         <div class="container">
             <div class="card">
@@ -59,6 +62,7 @@
         </div>
     </div>
     <script type="text/javascript" src="./Assets/JS/procesos.JS"></script>
+    <script type="text/javascript" src="./Assets/JS/main.js"></script>
 </body>
 
 </html>
